@@ -1,36 +1,24 @@
-from wordgen.language import Language
-from wordgen.syntagmata import Syntagmata
+from wordgen.languages import *
 
-# base languages
-afrikaner = Syntagmata('afrikaner')
-arabic = Syntagmata('arabic')
-chinese = Syntagmata('chinese')
-english = Syntagmata('english')
-gaelic = Syntagmata('gaelic')
-german = Syntagmata('german')
-hebrew = Syntagmata('hebrew')
-oldenglish = Syntagmata('oldenglish')
-oldnorse = Syntagmata('oldnorse')
-sanskrit = Syntagmata('sanskrit')
+Orcish = Composite()
+Orcish.addLanguage(Arabic, 9)
+Orcish.addLanguage(Afrikaner, 8)
+Orcish.addLanguage(Chinese, 5)
+Orcish.addLanguage(German, 4)
+Orcish.addLanguage(OldNorse)
 
-class Orcish(Language):
-    def __init__(self):
-        super(Orcish, self).__init__()
-        self.language = (german * 4 + afrikaner * 8 + oldnorse +
-            arabic * 9 + chinese * 5)
+Elvish = Composite()
+Elvish.addLanguage(OldNorse, 5)
+Elvish.addLanguage(OldEnglish, 2)
+Elvish.addLanguage(Gaelic)
 
-class Elvish(Language):
-    def __init__(self):
-        super(Elvish, self).__init__()
-        self.language = (oldnorse * 5 + oldenglish * 2)
+Human = Composite()
+Human.addLanguage(Sanskrit, 6)
+Human.addLanguage(English, 6)
+Human.addLanguage(OldNorse, 2)
+Elvish.addLanguage(OldEnglish)
 
-class Human(Language):
-    def __init__(self):
-        super(Human, self).__init__()
-        self.language = (oldenglish + oldnorse * 2 + sanskrit * 6 +
-            english * 5)
-
-class Dwarvish(Language):
-    def __init__(self):
-        super(Dwarvish, self).__init__()
-        self.language = (gaelic * 5 + hebrew * 4 + german)
+Dwarvish = Composite()
+Dwarvish.addLanguage(Gaelic, 5)
+Dwarvish.addLanguage(Hebrew, 5)
+Dwarvish.addLanguage(German)
